--- a/index.html
+++ b/index.html
@@ -372,6 +372,70 @@
     .s-2g{ left: calc(6 * var(--step)); top: calc(1 * var(--step)); }
 
     /* ==========================
+       W2 Gruppe: W1 + Schatten wird 90° im Uhrzeigersinn gedreht
+       (alles als EIN Paket: Schatten + Fläche + Slots + Zahlen)
+       ========================== */
+    .w2Group{
+      position:absolute;
+      inset:0;
+      z-index: 5;
+      pointer-events:none;
+    }
+    .w2Group.hidden{ display:none; }
+
+    /* Wrapper auf Q1 (2E) – wird nur visuell gedreht */
+    .w2Pack{
+      position:absolute;
+      left: calc(4 * var(--step)); /* Q1 Start = 2E */
+      top:  calc(1 * var(--step)); /* 2E */
+      width: calc(3 * var(--cell) + 2 * var(--cell-gap));
+      height: calc(3 * var(--cell) + 2 * var(--cell-gap));
+      transform-origin: 50% 50%;
+      transform: rotate(90deg); /* Uhrzeigersinn */
+    }
+
+    /* W2 Schatten muss mitwandern -> liegt IM Pack */
+    .w2Shadow{
+      position:absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 1; /* über Kugel, unter Würfel */
+      pointer-events:none;
+      box-shadow:
+        0 18px 22px rgba(0,0,0,0.30),
+        0 9px  14px rgba(0,0,0,0.16);
+    }
+
+    .w2Face{
+      position:absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 2;
+    }
+
+    /* W2 Slots liegen im Pack relativ zur Fläche */
+    .w2Slot{
+      position:absolute;
+      width: var(--cell);
+      height: var(--cell);
+      z-index: 3;
+    }
+
+    /* relative Positionen innerhalb der 3×3 Fläche:
+       wir spiegeln die "rechte Seite" aus KIP in ein lokales Koordinatensystem:
+       - früher: 3E (x=0, y=1), 4E (x=0, y=2), 2F (x=1, y=0), 2G (x=2, y=0)
+       local step = var(--step)
+    */
+    .w2-3e{ left: calc(0 * var(--step)); top: calc(1 * var(--step)); }
+    .w2-4e{ left: calc(0 * var(--step)); top: calc(2 * var(--step)); }
+    .w2-2f{ left: calc(1 * var(--step)); top: calc(0 * var(--step)); }
+    .w2-2g{ left: calc(2 * var(--step)); top: calc(0 * var(--step)); }
+
+    /* ==========================
        Controls
        ========================== */
 
@@ -439,6 +503,20 @@
         <div class="slot s-2g read-north" data-slot="W1_4"><div class="num"><span></span></div></div>
       </div>
 
+      <!-- W2 Gruppe (W1+Schatten 90° im Uhrzeigersinn gedreht, auf Q1, neue 4 Zahlen) -->
+      <div id="w2Group" class="w2Group hidden" aria-label="W2 Gruppe">
+        <div class="w2Pack" aria-label="W2 Paket (Schatten+Fläche+Slots+Zahlen)">
+          <div class="w2Shadow" aria-hidden="true"></div>
+          <div class="cubeFace w2Face" aria-label="W2 Fläche"></div>
+
+          <!-- W2 Slots (4 Stück) -->
+          <div class="slot w2Slot w2-3e read-east"  data-slot="W2_1"><div class="num"><span></span></div></div>
+          <div class="slot w2Slot w2-4e read-east"  data-slot="W2_2"><div class="num"><span></span></div></div>
+          <div class="slot w2Slot w2-2f read-north" data-slot="W2_3"><div class="num"><span></span></div></div>
+          <div class="slot w2Slot w2-2g read-north" data-slot="W2_4"><div class="num"><span></span></div></div>
+        </div>
+      </div>
+
       <!-- Kugel (unter Schatten!) -->
       <div class="ball" aria-label="Kugel"></div>
     </div>
@@ -446,6 +524,7 @@
     <div class="controls">
       <button id="btnBestuecken" class="btn">Würfel mischen</button>
       <button id="btnKip50" class="btn">KIP 50% AN/AUS</button>
+      <button id="btnW2" class="btn">W2 AN/AUS</button>
     </div>
   </div>
 
@@ -454,7 +533,9 @@
     const grid = document.getElementById("grid");
     const btnMix = document.getElementById("btnBestuecken");
     const btnKip50 = document.getElementById("btnKip50");
+    const btnW2 = document.getElementById("btnW2");
     const kipGroup = document.getElementById("kipGroup");
+    const w2Group = document.getElementById("w2Group");
 
     function setBoardSquare(){
       const w = Math.round(boardEl.getBoundingClientRect().width);
@@ -543,12 +624,16 @@
     // ==========================
     // W1 ist "unsichtbar" (kein DOM).
     // Wir halten nur die 4 Random-Werte als State.
+    // W2 ist die nächste 4er-Gruppe.
     // ==========================
 
     let w1Nums = [0,0,0,0];
+    let w2Nums = [0,0,0,0];
 
-    function setRandomW1(){
-      w1Nums = getUniqueRandomNumbers(4, 0, 11);
+    function setRandomW1W2(){
+      const eight = getUniqueRandomNumbers(8, 0, 11);
+      w1Nums = eight.slice(0,4);
+      w2Nums = eight.slice(4,8);
     }
 
     // Rechte Seite (W1 wandert nach rechts): Slots W1_1..W1_4 bekommen w1Nums
@@ -568,7 +653,24 @@
       }
     }
 
-    // Linke (neue) Slots bleiben erstmal leer (W2 kommt später)
+    // W2 Gruppe: Slots W2_1..W2_4 bekommen w2Nums
+    function applyW2ToW2Group(){
+      const targets = [
+        document.querySelector('#w2Group [data-slot="W2_1"] .num > span'),
+        document.querySelector('#w2Group [data-slot="W2_2"] .num > span'),
+        document.querySelector('#w2Group [data-slot="W2_3"] .num > span'),
+        document.querySelector('#w2Group [data-slot="W2_4"] .num > span'),
+      ];
+
+      for(let i=0;i<4;i++){
+        const sp = targets[i];
+        const n = w2Nums[i];
+        renderNumber(sp, n);
+        setDot(sp, n);
+      }
+    }
+
+    // Linke (neue) Slots im KIP bleiben erstmal leer (W2 kommt dort später als KIP-Phase)
     function clearLeftSlots(){
       const leftKeys = ["W2_A","W2_B","W2_C","W2_D"];
       leftKeys.forEach(k=>{
@@ -582,8 +684,9 @@
     }
 
     function reroll(){
-      setRandomW1();
+      setRandomW1W2();
       applyW1ToRightSlots();
+      applyW2ToW2Group();
       clearLeftSlots();
     }
 
@@ -593,6 +696,10 @@
 
     btnKip50.addEventListener("click", () => {
       kipGroup.classList.toggle("kip50");
+    });
+
+    btnW2.addEventListener("click", () => {
+      w2Group.classList.toggle("hidden");
     });
 
     window.addEventListener("load", () => {
