--- a/index.html
+++ b/index.html
@@ -126,7 +126,6 @@
     .c-violett{ background: var(--violett); }
     .c-blau  { background: var(--blau);   }
 
-    /* jedes Farbfeld bekommt 2px Innenrahmen (optisch 4px zwischen zwei Farbfeldern) */
     .cell.colorCell{
       box-shadow:
         inset 0 0 0 2px #000,
@@ -154,11 +153,7 @@
         inset  0  26px 40px rgba(0,0,0,0.30);
     }
 
-    /* ==========================
-       Ebenen-Reihenfolge fix:
-       Boden (floor) -> Kugel -> Schatten -> Würfel -> Slots -> Zahlen
-       ========================== */
-
+    /* Boden -> Kugel -> Schatten -> Würfel -> Slots -> Zahlen */
     .ball{
       position:absolute;
       left: calc(var(--step) + ( (6 * var(--cell) + 5 * var(--cell-gap)) / 2 ));
@@ -172,46 +167,39 @@
         radial-gradient(circle at 55% 60%, rgba(0,0,0,0.18), rgba(0,0,0,0.00) 55%),
         radial-gradient(circle at 50% 55%, #d6b996, #b88d63 70%);
       box-shadow: 0 3px 6px rgba(0,0,0,0.28);
-      z-index: 4; /* Kugel unter Schatten */
+      z-index: 4;
       pointer-events: none;
     }
 
     /* ==========================
-       W2->W1 KIP-Gruppe (Phantom-Methode)
-       Alles, was mitskalieren soll, liegt IN dieser Gruppe.
+       KIP-Gruppe (bleibt wie gehabt)
        ========================== */
-
     .kipGroup{
       position:absolute;
       inset:0;
-      z-index: 5;          /* über Kugel, unter Würfel/Slots intern geregelt */
+      z-index: 5;
       pointer-events:none;
-
-      /* Skalierachse = senkrechte Mittellinie der Box */
       transform-origin: calc(4 * var(--step)) 50%;
     }
-    .kipGroup.kip50{
-      transform: scaleX(0.5);
-    }
+    .kipGroup.kip50{ transform: scaleX(0.5); }
+    .kipGroup.hidden{ display:none; }
 
-    /* Schatten (Phantom) – wird garantiert mitskaliert */
     .kipShadow{
       position:absolute;
-      left: calc(1 * var(--step));  /* beginnt bei 2B */
-      top:  calc(1 * var(--step));  /* beginnt bei 2B */
-      width: calc(6 * var(--cell) + 5 * var(--cell-gap)); /* über Q0+Q1 */
+      left: calc(1 * var(--step));
+      top:  calc(1 * var(--step));
+      width: calc(6 * var(--cell) + 5 * var(--cell-gap));
       height: calc(3 * var(--cell) + 2 * var(--cell-gap));
       background: transparent;
-      z-index: 1; /* Schatten liegt über Kugel, aber unter Würfel */
+      z-index: 1;
       box-shadow:
         0 22px 26px rgba(0,0,0,0.32),
         0 10px 16px rgba(0,0,0,0.18);
     }
 
-    /* zusätzlicher Kernschatten an der zentralen Würfelkante (Phantom-Kante) */
     .kipEdgeCore{
       position:absolute;
-      left: calc(4 * var(--step));  /* Mittellinie zwischen Q0 und Q1 */
+      left: calc(4 * var(--step));
       top:  calc(1 * var(--step));
       width: 6px;
       height: calc(3 * var(--cell) + 2 * var(--cell-gap));
@@ -227,14 +215,12 @@
       opacity: 0.95;
     }
 
-    /* Würfelfläche (wie W1 Holz + Innenrahmen) */
     .cubeFace{
       position:absolute;
       width: calc(3 * var(--cell) + 2 * var(--cell-gap));
       height: calc(3 * var(--cell) + 2 * var(--cell-gap));
       box-sizing: border-box;
       border-radius: 0;
-
       background:
         radial-gradient(120% 90% at 15% 15%, var(--cube-wood-gold), transparent 55%),
         radial-gradient(120% 90% at 25% 25%, var(--cube-wood-warm), transparent 60%),
@@ -247,41 +233,26 @@
         ),
         linear-gradient(135deg, rgba(255,255,255,0.16), rgba(0,0,0,0.08)),
         linear-gradient(180deg, var(--cube-wood-base), var(--cube-wood-deep));
-
       box-shadow:
         inset 0 0 0 2px var(--w1-innerframe),
         0 0 0 1px rgba(255,255,255,0.08) inset;
-
-      z-index: 2; /* Würfel über Schatten */
+      z-index: 2;
     }
 
-    /* Q0 Würfelfläche */
-    .faceQ0{
-      left: calc(1 * var(--step));  /* 2B */
-      top:  calc(1 * var(--step));  /* 2B */
-    }
-    /* Q1 Würfelfläche */
-    .faceQ1{
-      left: calc(4 * var(--step));  /* 2E */
-      top:  calc(1 * var(--step));  /* 2E */
-    }
+    .faceQ0{ left: calc(1 * var(--step)); top: calc(1 * var(--step)); }
+    .faceQ1{ left: calc(4 * var(--step)); top: calc(1 * var(--step)); }
 
-    /* Slots (wie gehabt) */
     .slot{
       position:absolute;
       width: var(--cell);
       height: var(--cell);
       box-sizing: border-box;
-
       background:
         linear-gradient(135deg, rgba(255,255,255,0.14), rgba(0,0,0,0.05)),
         var(--slot-fill);
-
       border: var(--slot-border-w) solid var(--slot-border);
       border-radius: var(--cell-radius);
-
-      z-index: 3; /* Slots über Würfel */
-
+      z-index: 3;
       box-shadow:
         1px 1px 0 rgba(255,255,255,0.18) inset,
         -1px -1px 0 rgba(0,0,0,0.08) inset,
@@ -296,12 +267,8 @@
       align-items:center;
       justify-content:center;
       user-select:none;
-      z-index: 4; /* Zahlen über Slot */
+      z-index: 4;
     }
-
-    /* ==========================
-       TYPO: Optik/Kerning
-       ========================== */
 
     .slot .num > span{
       display:inline-flex;
@@ -311,7 +278,6 @@
       color: #111;
       font-size: clamp(18px, 8vmin, 36px);
       text-shadow: 0 1px 0 rgba(255,255,255,0.35);
-
       transform: rotate(var(--num-rot, 0deg)) translate(var(--opt-x, 0px), var(--opt-y, 0px));
       transform-origin: 50% 50%;
       position: relative;
@@ -319,12 +285,8 @@
 
     .slot .num > span[data-val="7"]{ --opt-x: 2px; }
     .slot .num > span.num10{ --opt-x: -2px; }
-
     .slot .num > span[data-val="6"],
-    .slot .num > span[data-val="9"]{
-      --opt-x: -2px;
-    }
-
+    .slot .num > span[data-val="9"]{ --opt-x: -2px; }
     .slot .num > span .d{ display:inline-block; line-height: 1; }
     .slot .num > span.num11 .d + .d{ margin-left: -0.18em; }
     .slot .num > span.num10 .d + .d{ margin-left: -0.10em; }
@@ -347,33 +309,20 @@
     .read-east  { --num-rot: calc(var(--rotSign) * -90deg); }
     .read-north { --num-rot: calc(var(--rotSign) * 180deg); }
 
-    /* ==========================
-       Slot-Positionen (W2–W1–KIP)
-       gefordert: 4D, 3D, 2B, 2C, 3E, 4E, 2G, 2F
-       Raster: row/col -> top/left = (row-1)/(col-1) * step
-       ========================== */
-
-    /* 4D */
+    /* Slot-Positionen */
     .s-4d{ left: calc(3 * var(--step)); top: calc(3 * var(--step)); }
-    /* 3D */
     .s-3d{ left: calc(3 * var(--step)); top: calc(2 * var(--step)); }
-    /* 2B */
     .s-2b{ left: calc(1 * var(--step)); top: calc(1 * var(--step)); }
-    /* 2C */
     .s-2c{ left: calc(2 * var(--step)); top: calc(1 * var(--step)); }
 
-    /* 3E */
     .s-3e{ left: calc(4 * var(--step)); top: calc(2 * var(--step)); }
-    /* 4E */
     .s-4e{ left: calc(4 * var(--step)); top: calc(3 * var(--step)); }
-    /* 2F */
     .s-2f{ left: calc(5 * var(--step)); top: calc(1 * var(--step)); }
-    /* 2G */
     .s-2g{ left: calc(6 * var(--step)); top: calc(1 * var(--step)); }
 
     /* ==========================
-       W2 Gruppe: W1 + Schatten wird 90° im Uhrzeigersinn gedreht
-       (alles als EIN Paket: Schatten + Fläche + Slots + Zahlen)
+       W2 Gruppe (ECHT als Paket, KEIN rotate-transform!)
+       Schatten + Fläche + Slots + Zahlen liegen zusammen auf Q1.
        ========================== */
     .w2Group{
       position:absolute;
@@ -383,62 +332,24 @@
     }
     .w2Group.hidden{ display:none; }
 
-    /* Wrapper auf Q1 (2E) – wird nur visuell gedreht */
-    .w2Pack{
-      position:absolute;
-      left: calc(4 * var(--step)); /* Q1 Start = 2E */
-      top:  calc(1 * var(--step)); /* 2E */
-      width: calc(3 * var(--cell) + 2 * var(--cell-gap));
-      height: calc(3 * var(--cell) + 2 * var(--cell-gap));
-      transform-origin: 50% 50%;
-      transform: rotate(90deg); /* Uhrzeigersinn */
-    }
-
-    /* W2 Schatten muss mitwandern -> liegt IM Pack */
+    /* W2 Schatten (mitwandern, exakt unter der Q1-Fläche) */
     .w2Shadow{
       position:absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 1; /* über Kugel, unter Würfel */
+      left: calc(4 * var(--step));  /* Q1 */
+      top:  calc(1 * var(--step));
+      width: calc(3 * var(--cell) + 2 * var(--cell-gap));
+      height: calc(3 * var(--cell) + 2 * var(--cell-gap));
+      z-index: 1;
       pointer-events:none;
       box-shadow:
         0 18px 22px rgba(0,0,0,0.30),
         0 9px  14px rgba(0,0,0,0.16);
+      background: transparent;
     }
-
-    .w2Face{
-      position:absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 2;
-    }
-
-    /* W2 Slots liegen im Pack relativ zur Fläche */
-    .w2Slot{
-      position:absolute;
-      width: var(--cell);
-      height: var(--cell);
-      z-index: 3;
-    }
-
-    /* relative Positionen innerhalb der 3×3 Fläche:
-       wir spiegeln die "rechte Seite" aus KIP in ein lokales Koordinatensystem:
-       - früher: 3E (x=0, y=1), 4E (x=0, y=2), 2F (x=1, y=0), 2G (x=2, y=0)
-       local step = var(--step)
-    */
-    .w2-3e{ left: calc(0 * var(--step)); top: calc(1 * var(--step)); }
-    .w2-4e{ left: calc(0 * var(--step)); top: calc(2 * var(--step)); }
-    .w2-2f{ left: calc(1 * var(--step)); top: calc(0 * var(--step)); }
-    .w2-2g{ left: calc(2 * var(--step)); top: calc(0 * var(--step)); }
 
     /* ==========================
        Controls
        ========================== */
-
     .controls{
       width: 100%;
       display:flex;
@@ -477,47 +388,39 @@
     <div class="board" id="board">
       <div class="floor" aria-hidden="true"></div>
 
-      <!-- Raster -->
       <div id="grid" class="grid" aria-label="8×8 Raster"></div>
 
-      <!-- KIP-Gruppe (W2 -> W1 KIP) -->
+      <!-- KIP-Gruppe -->
       <div id="kipGroup" class="kipGroup" aria-label="W2–W1 KIP Gruppe">
-        <!-- Schatten: Kugel darunter, Würfel darüber -->
         <div class="kipShadow" aria-hidden="true"></div>
         <div class="kipEdgeCore" aria-hidden="true"></div>
 
-        <!-- Zwei Würfelflächen (aus W1-Optik abgenommen) -->
         <div class="cubeFace faceQ0" aria-label="Würfelfläche Q0"></div>
         <div class="cubeFace faceQ1" aria-label="Würfelfläche Q1"></div>
 
-        <!-- 8 Slots (Positionen wie angegeben) -->
         <div class="slot s-4d read-south" data-slot="W2_A"><div class="num"><span></span></div></div>
         <div class="slot s-3d read-south" data-slot="W2_B"><div class="num"><span></span></div></div>
         <div class="slot s-2b read-south" data-slot="W2_C"><div class="num"><span></span></div></div>
         <div class="slot s-2c read-south" data-slot="W2_D"><div class="num"><span></span></div></div>
 
-        <!-- Rechte Seite (skalierte W1): diese 4 Slots bekommen die W1-Zahlen -->
         <div class="slot s-3e read-east"  data-slot="W1_1"><div class="num"><span></span></div></div>
         <div class="slot s-4e read-east"  data-slot="W1_2"><div class="num"><span></span></div></div>
         <div class="slot s-2f read-north" data-slot="W1_3"><div class="num"><span></span></div></div>
         <div class="slot s-2g read-north" data-slot="W1_4"><div class="num"><span></span></div></div>
       </div>
 
-      <!-- W2 Gruppe (W1+Schatten 90° im Uhrzeigersinn gedreht, auf Q1, neue 4 Zahlen) -->
+      <!-- W2 Gruppe (als echtes Paket auf Q1) -->
       <div id="w2Group" class="w2Group hidden" aria-label="W2 Gruppe">
-        <div class="w2Pack" aria-label="W2 Paket (Schatten+Fläche+Slots+Zahlen)">
-          <div class="w2Shadow" aria-hidden="true"></div>
-          <div class="cubeFace w2Face" aria-label="W2 Fläche"></div>
+        <div class="w2Shadow" aria-hidden="true"></div>
+        <div class="cubeFace faceQ1" aria-label="W2 Fläche (Q1)"></div>
 
-          <!-- W2 Slots (4 Stück) -->
-          <div class="slot w2Slot w2-3e read-east"  data-slot="W2_1"><div class="num"><span></span></div></div>
-          <div class="slot w2Slot w2-4e read-east"  data-slot="W2_2"><div class="num"><span></span></div></div>
-          <div class="slot w2Slot w2-2f read-north" data-slot="W2_3"><div class="num"><span></span></div></div>
-          <div class="slot w2Slot w2-2g read-north" data-slot="W2_4"><div class="num"><span></span></div></div>
-        </div>
+        <!-- 4 W2 Slots: exakt wie rechte Seite, nur mit w2Nums -->
+        <div class="slot s-3e read-east"  data-slot="W2_1"><div class="num"><span></span></div></div>
+        <div class="slot s-4e read-east"  data-slot="W2_2"><div class="num"><span></span></div></div>
+        <div class="slot s-2f read-north" data-slot="W2_3"><div class="num"><span></span></div></div>
+        <div class="slot s-2g read-north" data-slot="W2_4"><div class="num"><span></span></div></div>
       </div>
 
-      <!-- Kugel (unter Schatten!) -->
       <div class="ball" aria-label="Kugel"></div>
     </div>
 
@@ -569,13 +472,11 @@
 
     function buildGridOnce(){
       if (grid.dataset.built === "1") return;
-
       for(let r=1; r<=8; r++){
         for(let c=0; c<8; c++){
           const cell = document.createElement("div");
           cell.className = "cell";
           const coord = key(r, cols[c]);
-
           if(colorMap.has(coord)){
             cell.classList.add(colorMap.get(coord));
             cell.classList.add("colorCell");
@@ -602,7 +503,6 @@
       return pool.slice(0, count);
     }
 
-    // rendern: 10/11 als zwei Digits (für Kerning)
     function renderNumber(span, n){
       span.classList.remove("num10","num11");
       span.innerHTML = "";
@@ -621,12 +521,6 @@
       span.textContent = String(n);
     }
 
-    // ==========================
-    // W1 ist "unsichtbar" (kein DOM).
-    // Wir halten nur die 4 Random-Werte als State.
-    // W2 ist die nächste 4er-Gruppe.
-    // ==========================
-
     let w1Nums = [0,0,0,0];
     let w2Nums = [0,0,0,0];
 
@@ -636,7 +530,6 @@
       w2Nums = eight.slice(4,8);
     }
 
-    // Rechte Seite (W1 wandert nach rechts): Slots W1_1..W1_4 bekommen w1Nums
     function applyW1ToRightSlots(){
       const targets = [
         kipGroup.querySelector('[data-slot="W1_1"] .num > span'),
@@ -644,7 +537,6 @@
         kipGroup.querySelector('[data-slot="W1_3"] .num > span'),
         kipGroup.querySelector('[data-slot="W1_4"] .num > span'),
       ];
-
       for(let i=0;i<4;i++){
         const sp = targets[i];
         const n = w1Nums[i];
@@ -653,7 +545,6 @@
       }
     }
 
-    // W2 Gruppe: Slots W2_1..W2_4 bekommen w2Nums
     function applyW2ToW2Group(){
       const targets = [
         document.querySelector('#w2Group [data-slot="W2_1"] .num > span'),
@@ -661,7 +552,6 @@
         document.querySelector('#w2Group [data-slot="W2_3"] .num > span'),
         document.querySelector('#w2Group [data-slot="W2_4"] .num > span'),
       ];
-
       for(let i=0;i<4;i++){
         const sp = targets[i];
         const n = w2Nums[i];
@@ -670,7 +560,6 @@
       }
     }
 
-    // Linke (neue) Slots im KIP bleiben erstmal leer (W2 kommt dort später als KIP-Phase)
     function clearLeftSlots(){
       const leftKeys = ["W2_A","W2_B","W2_C","W2_D"];
       leftKeys.forEach(k=>{
@@ -690,23 +579,22 @@
       clearLeftSlots();
     }
 
-    btnMix.addEventListener("click", () => {
-      reroll();
-    });
+    btnMix.addEventListener("click", reroll);
 
     btnKip50.addEventListener("click", () => {
       kipGroup.classList.toggle("kip50");
     });
 
     btnW2.addEventListener("click", () => {
-      w2Group.classList.toggle("hidden");
+      const show = w2Group.classList.toggle("hidden") === false;
+      // Wenn W2 sichtbar ist: KIP ausblenden, damit nix überlagert
+      kipGroup.classList.toggle("hidden", show);
     });
 
     window.addEventListener("load", () => {
       setBoardSquare();
       requestAnimationFrame(setBoardSquare);
       setTimeout(setBoardSquare, 80);
-
       buildGridOnce();
       reroll();
     });
