--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>KIPP – 8×8 Raster</title>
+  <title>KIPP – W1/W2/W3 Rotation</title>
 
   <style>
     :root{
@@ -12,19 +12,16 @@
       --gruen:   rgb(0, 166, 82);
       --orange:  rgb(249, 150, 30);
 
-      /* echtes 8×8 ohne Zwischenräume */
       --cell-gap: 0px;
       --cell-radius: 0px;
 
       --floor: #7a4a34;
 
-      /* Holz */
       --cube-wood-base: #d7c2a4;
       --cube-wood-deep: #c9b08f;
       --cube-wood-warm: rgba(155, 70, 110, 0.10);
       --cube-wood-gold: rgba(249, 150, 30, 0.10);
 
-      /* W1 Innenrahmen (Gamma-Rand) */
       --w1-innerframe: rgba(122, 74, 52, 1);
 
       --slot-border: rgba(0,0,0,0.55);
@@ -153,7 +150,7 @@
         inset  0  26px 40px rgba(0,0,0,0.30);
     }
 
-    /* Boden -> Kugel -> Schatten -> Würfel -> Slots -> Zahlen */
+    /* Kugel: unter dem Paket-Schatten */
     .ball{
       position:absolute;
       left: calc(var(--step) + ( (6 * var(--cell) + 5 * var(--cell-gap)) / 2 ));
@@ -171,54 +168,36 @@
       pointer-events: none;
     }
 
-    /* ==========================
-       KIP-Gruppe (bleibt wie gehabt)
-       ========================== */
-    .kipGroup{
+    /* ========= DAS EINE PAKET =========
+       Liegt initial in Q0 (2B..4D) und dreht sich um die Ecke am Kugelmittelpunkt:
+       -> transform-origin: 100% 100% (unten rechts)
+    */
+    .wPack{
+      position:absolute;
+      left: calc(1 * var(--step));  /* 2B */
+      top:  calc(1 * var(--step));  /* 2B */
+      width: calc(3 * var(--cell) + 2 * var(--cell-gap));
+      height: calc(3 * var(--cell) + 2 * var(--cell-gap));
+      pointer-events:none;
+      z-index: 5;
+
+      transform-origin: 100% 100%; /* Ecke am Kugelmittelpunkt */
+      transform: rotate(0deg);     /* wird per JS gesetzt */
+    }
+
+    .wShadow{
       position:absolute;
       inset:0;
-      z-index: 5;
-      pointer-events:none;
-      transform-origin: calc(4 * var(--step)) 50%;
-    }
-    .kipGroup.kip50{ transform: scaleX(0.5); }
-    .kipGroup.hidden{ display:none; }
-
-    .kipShadow{
-      position:absolute;
-      left: calc(1 * var(--step));
-      top:  calc(1 * var(--step));
-      width: calc(6 * var(--cell) + 5 * var(--cell-gap));
-      height: calc(3 * var(--cell) + 2 * var(--cell-gap));
+      z-index: 1;
       background: transparent;
-      z-index: 1;
       box-shadow:
-        0 22px 26px rgba(0,0,0,0.32),
-        0 10px 16px rgba(0,0,0,0.18);
-    }
-
-    .kipEdgeCore{
-      position:absolute;
-      left: calc(4 * var(--step));
-      top:  calc(1 * var(--step));
-      width: 6px;
-      height: calc(3 * var(--cell) + 2 * var(--cell-gap));
-      transform: translateX(-50%);
-      background:
-        linear-gradient(90deg,
-          rgba(0,0,0,0.00),
-          rgba(0,0,0,0.28),
-          rgba(0,0,0,0.00)
-        );
-      z-index: 1;
-      filter: blur(0.2px);
-      opacity: 0.95;
+        0 18px 22px rgba(0,0,0,0.30),
+        0  9px 14px rgba(0,0,0,0.16);
     }
 
     .cubeFace{
       position:absolute;
-      width: calc(3 * var(--cell) + 2 * var(--cell-gap));
-      height: calc(3 * var(--cell) + 2 * var(--cell-gap));
+      inset:0;
       box-sizing: border-box;
       border-radius: 0;
       background:
@@ -238,9 +217,6 @@
         0 0 0 1px rgba(255,255,255,0.08) inset;
       z-index: 2;
     }
-
-    .faceQ0{ left: calc(1 * var(--step)); top: calc(1 * var(--step)); }
-    .faceQ1{ left: calc(4 * var(--step)); top: calc(1 * var(--step)); }
 
     .slot{
       position:absolute;
@@ -287,6 +263,7 @@
     .slot .num > span.num10{ --opt-x: -2px; }
     .slot .num > span[data-val="6"],
     .slot .num > span[data-val="9"]{ --opt-x: -2px; }
+
     .slot .num > span .d{ display:inline-block; line-height: 1; }
     .slot .num > span.num11 .d + .d{ margin-left: -0.18em; }
     .slot .num > span.num10 .d + .d{ margin-left: -0.10em; }
@@ -304,52 +281,18 @@
       box-shadow: 0 1px 0 rgba(255,255,255,0.22);
     }
 
+    /* Zahlenfuß-Ausrichtung (bleibt wie gehabt steuerbar) */
     .read-south { --num-rot: calc(var(--rotSign) * 0deg); }
     .read-west  { --num-rot: calc(var(--rotSign) * 90deg); }
     .read-east  { --num-rot: calc(var(--rotSign) * -90deg); }
     .read-north { --num-rot: calc(var(--rotSign) * 180deg); }
 
-    /* Slot-Positionen */
-    .s-4d{ left: calc(3 * var(--step)); top: calc(3 * var(--step)); }
-    .s-3d{ left: calc(3 * var(--step)); top: calc(2 * var(--step)); }
-    .s-2b{ left: calc(1 * var(--step)); top: calc(1 * var(--step)); }
-    .s-2c{ left: calc(2 * var(--step)); top: calc(1 * var(--step)); }
+    /* 4 Slotpositionen im 3×3 Paket (lokal) */
+    .l-2b{ left: calc(0 * var(--step)); top: calc(0 * var(--step)); }
+    .l-2c{ left: calc(1 * var(--step)); top: calc(0 * var(--step)); }
+    .l-3d{ left: calc(2 * var(--step)); top: calc(1 * var(--step)); }
+    .l-4d{ left: calc(2 * var(--step)); top: calc(2 * var(--step)); }
 
-    .s-3e{ left: calc(4 * var(--step)); top: calc(2 * var(--step)); }
-    .s-4e{ left: calc(4 * var(--step)); top: calc(3 * var(--step)); }
-    .s-2f{ left: calc(5 * var(--step)); top: calc(1 * var(--step)); }
-    .s-2g{ left: calc(6 * var(--step)); top: calc(1 * var(--step)); }
-
-    /* ==========================
-       W2 Gruppe (ECHT als Paket, KEIN rotate-transform!)
-       Schatten + Fläche + Slots + Zahlen liegen zusammen auf Q1.
-       ========================== */
-    .w2Group{
-      position:absolute;
-      inset:0;
-      z-index: 5;
-      pointer-events:none;
-    }
-    .w2Group.hidden{ display:none; }
-
-    /* W2 Schatten (mitwandern, exakt unter der Q1-Fläche) */
-    .w2Shadow{
-      position:absolute;
-      left: calc(4 * var(--step));  /* Q1 */
-      top:  calc(1 * var(--step));
-      width: calc(3 * var(--cell) + 2 * var(--cell-gap));
-      height: calc(3 * var(--cell) + 2 * var(--cell-gap));
-      z-index: 1;
-      pointer-events:none;
-      box-shadow:
-        0 18px 22px rgba(0,0,0,0.30),
-        0 9px  14px rgba(0,0,0,0.16);
-      background: transparent;
-    }
-
-    /* ==========================
-       Controls
-       ========================== */
     .controls{
       width: 100%;
       display:flex;
@@ -387,58 +330,36 @@
   <div class="stage">
     <div class="board" id="board">
       <div class="floor" aria-hidden="true"></div>
-
       <div id="grid" class="grid" aria-label="8×8 Raster"></div>
 
-      <!-- KIP-Gruppe -->
-      <div id="kipGroup" class="kipGroup" aria-label="W2–W1 KIP Gruppe">
-        <div class="kipShadow" aria-hidden="true"></div>
-        <div class="kipEdgeCore" aria-hidden="true"></div>
+      <!-- EIN Paket: dreht sich um die Ecke am Kugelmittelpunkt -->
+      <div id="wPack" class="wPack" aria-label="W-Paket (W1/W2/W3)">
+        <div class="wShadow" aria-hidden="true"></div>
+        <div class="cubeFace" aria-hidden="true"></div>
 
-        <div class="cubeFace faceQ0" aria-label="Würfelfläche Q0"></div>
-        <div class="cubeFace faceQ1" aria-label="Würfelfläche Q1"></div>
-
-        <div class="slot s-4d read-south" data-slot="W2_A"><div class="num"><span></span></div></div>
-        <div class="slot s-3d read-south" data-slot="W2_B"><div class="num"><span></span></div></div>
-        <div class="slot s-2b read-south" data-slot="W2_C"><div class="num"><span></span></div></div>
-        <div class="slot s-2c read-south" data-slot="W2_D"><div class="num"><span></span></div></div>
-
-        <div class="slot s-3e read-east"  data-slot="W1_1"><div class="num"><span></span></div></div>
-        <div class="slot s-4e read-east"  data-slot="W1_2"><div class="num"><span></span></div></div>
-        <div class="slot s-2f read-north" data-slot="W1_3"><div class="num"><span></span></div></div>
-        <div class="slot s-2g read-north" data-slot="W1_4"><div class="num"><span></span></div></div>
-      </div>
-
-      <!-- W2 Gruppe (als echtes Paket auf Q1) -->
-      <div id="w2Group" class="w2Group hidden" aria-label="W2 Gruppe">
-        <div class="w2Shadow" aria-hidden="true"></div>
-        <div class="cubeFace faceQ1" aria-label="W2 Fläche (Q1)"></div>
-
-        <!-- 4 W2 Slots: exakt wie rechte Seite, nur mit w2Nums -->
-        <div class="slot s-3e read-east"  data-slot="W2_1"><div class="num"><span></span></div></div>
-        <div class="slot s-4e read-east"  data-slot="W2_2"><div class="num"><span></span></div></div>
-        <div class="slot s-2f read-north" data-slot="W2_3"><div class="num"><span></span></div></div>
-        <div class="slot s-2g read-north" data-slot="W2_4"><div class="num"><span></span></div></div>
+        <div class="slot l-2b read-south" data-slot="S1"><div class="num"><span></span></div></div>
+        <div class="slot l-2c read-south" data-slot="S2"><div class="num"><span></span></div></div>
+        <div class="slot l-3d read-east"  data-slot="S3"><div class="num"><span></span></div></div>
+        <div class="slot l-4d read-east"  data-slot="S4"><div class="num"><span></span></div></div>
       </div>
 
       <div class="ball" aria-label="Kugel"></div>
     </div>
 
     <div class="controls">
-      <button id="btnBestuecken" class="btn">Würfel mischen</button>
-      <button id="btnKip50" class="btn">KIP 50% AN/AUS</button>
-      <button id="btnW2" class="btn">W2 AN/AUS</button>
+      <button id="btnMix" class="btn">Würfel mischen (12)</button>
+      <button id="btnCW"  class="btn">KIPP ↻ (CW)</button>
+      <button id="btnCCW" class="btn">KIPP ↺ (CCW)</button>
     </div>
   </div>
 
   <script>
     const boardEl = document.getElementById("board");
     const grid = document.getElementById("grid");
-    const btnMix = document.getElementById("btnBestuecken");
-    const btnKip50 = document.getElementById("btnKip50");
-    const btnW2 = document.getElementById("btnW2");
-    const kipGroup = document.getElementById("kipGroup");
-    const w2Group = document.getElementById("w2Group");
+    const wPack = document.getElementById("wPack");
+    const btnMix = document.getElementById("btnMix");
+    const btnCW  = document.getElementById("btnCW");
+    const btnCCW = document.getElementById("btnCCW");
 
     function setBoardSquare(){
       const w = Math.round(boardEl.getBoundingClientRect().width);
@@ -521,82 +442,80 @@
       span.textContent = String(n);
     }
 
-    let w1Nums = [0,0,0,0];
-    let w2Nums = [0,0,0,0];
+    // ====== STATE ======
+    // 12 Zahlen -> 3 Flächen (W1,W2,W3) -> je 4 Zahlen
+    let faces = [
+      [0,0,0,0], // W1
+      [0,0,0,0], // W2
+      [0,0,0,0], // W3
+    ];
 
-    function setRandomW1W2(){
-      const eight = getUniqueRandomNumbers(8, 0, 11);
-      w1Nums = eight.slice(0,4);
-      w2Nums = eight.slice(4,8);
-    }
+    // Welche Fläche ist gerade sichtbar? 0=W1,1=W2,2=W3
+    let faceIndex = 0;
 
-    function applyW1ToRightSlots(){
-      const targets = [
-        kipGroup.querySelector('[data-slot="W1_1"] .num > span'),
-        kipGroup.querySelector('[data-slot="W1_2"] .num > span'),
-        kipGroup.querySelector('[data-slot="W1_3"] .num > span'),
-        kipGroup.querySelector('[data-slot="W1_4"] .num > span'),
+    // Visuelle Rotation des Pakets (Q0/Q1/Q2/Q3)
+    // wir halten das als "quarters" (0..3) und setzen rotate(quarters*90deg)
+    let quarters = 0;
+
+    function applyVisibleFaceNumbers(){
+      const nums = faces[faceIndex];
+      const slots = [
+        wPack.querySelector('[data-slot="S1"] .num > span'),
+        wPack.querySelector('[data-slot="S2"] .num > span'),
+        wPack.querySelector('[data-slot="S3"] .num > span'),
+        wPack.querySelector('[data-slot="S4"] .num > span'),
       ];
       for(let i=0;i<4;i++){
-        const sp = targets[i];
-        const n = w1Nums[i];
-        renderNumber(sp, n);
-        setDot(sp, n);
+        renderNumber(slots[i], nums[i]);
+        setDot(slots[i], nums[i]);
       }
     }
 
-    function applyW2ToW2Group(){
-      const targets = [
-        document.querySelector('#w2Group [data-slot="W2_1"] .num > span'),
-        document.querySelector('#w2Group [data-slot="W2_2"] .num > span'),
-        document.querySelector('#w2Group [data-slot="W2_3"] .num > span'),
-        document.querySelector('#w2Group [data-slot="W2_4"] .num > span'),
-      ];
-      for(let i=0;i<4;i++){
-        const sp = targets[i];
-        const n = w2Nums[i];
-        renderNumber(sp, n);
-        setDot(sp, n);
-      }
+    function applyRotation(){
+      const deg = quarters * 90;
+      wPack.style.transform = `rotate(${deg}deg)`;
     }
 
-    function clearLeftSlots(){
-      const leftKeys = ["W2_A","W2_B","W2_C","W2_D"];
-      leftKeys.forEach(k=>{
-        const sp = kipGroup.querySelector(`[data-slot="${k}"] .num > span`);
-        if(!sp) return;
-        sp.classList.remove("dot","num10","num11");
-        sp.innerHTML = "";
-        sp.textContent = "";
-        sp.removeAttribute("data-val");
-      });
+    function reroll12(){
+      // 0..11 wie bei dir, eindeutig
+      const twelve = getUniqueRandomNumbers(12, 0, 11);
+      faces[0] = twelve.slice(0,4);   // W1
+      faces[1] = twelve.slice(4,8);   // W2
+      faces[2] = twelve.slice(8,12);  // W3
+
+      // Startzustand wie du es beschreibst: W1 in Q0
+      faceIndex = 0;
+      quarters = 0;
+      applyRotation();
+      applyVisibleFaceNumbers();
     }
 
-    function reroll(){
-      setRandomW1W2();
-      applyW1ToRightSlots();
-      applyW2ToW2Group();
-      clearLeftSlots();
+    function kippCW(){
+      // W1->W2->W3->W1...
+      faceIndex = (faceIndex + 1) % 3;
+      quarters = (quarters + 1) % 4; // Q0->Q1->Q2->Q3->Q0...
+      applyRotation();
+      applyVisibleFaceNumbers();
     }
 
-    btnMix.addEventListener("click", reroll);
+    function kippCCW(){
+      // rückwärts: W1<-W2<-W3<-W1...
+      faceIndex = (faceIndex + 2) % 3;
+      quarters = (quarters + 3) % 4; // -1 mod 4
+      applyRotation();
+      applyVisibleFaceNumbers();
+    }
 
-    btnKip50.addEventListener("click", () => {
-      kipGroup.classList.toggle("kip50");
-    });
-
-    btnW2.addEventListener("click", () => {
-      const show = w2Group.classList.toggle("hidden") === false;
-      // Wenn W2 sichtbar ist: KIP ausblenden, damit nix überlagert
-      kipGroup.classList.toggle("hidden", show);
-    });
+    btnMix.addEventListener("click", reroll12);
+    btnCW.addEventListener("click", kippCW);
+    btnCCW.addEventListener("click", kippCCW);
 
     window.addEventListener("load", () => {
       setBoardSquare();
       requestAnimationFrame(setBoardSquare);
       setTimeout(setBoardSquare, 80);
       buildGridOnce();
-      reroll();
+      reroll12();
     });
 
     window.addEventListener("resize", () => {
